--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="./assets/icons/batata.svg" alt="logo-batatabit">
+        <h1>La próxima revolución <br> en el intercambio de criptomonedas.</h1>
+        <h2>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</h2>
+    </header>
     <main>
         <section></section>
         <section></section>
