--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 </head>
 <body>
     <header>
-        <img src="./assets/icons/batata.svg" alt="logo-batatabit">
-        <h1>La próxima revolución <br> en el intercambio de criptomonedas.</h1>
-        <h2>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</h2>
+        <img class="logo" src="./assets/icons/batata.svg" alt="logo-batatabit">
+        <div class="header--title-container">
+        <h1>La próxima revolución <br> en el intercambio de <br> criptomonedas.</h1>
+        <p>Batatabit te ayuda a navegar entre los <br> diferentes precios y tendencias.</p>
+        <a href="">Conoce Nuestros Planes <span><img src="./assets/icons/down-arrow.svg" alt="down arrow"></span></a>
+        </div>
     </header>
     <main>
         <section></section>
