--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="main-exchange-container">
+            <div class="backgroundImg"><img src="./assets/img/bitcoin.svg" alt=""></div>
+            <div class="main-exchange-container--title">
+                <h2>Visibilizamos todas las <br> tasas de cambio.</h2>
+                <p>Traemos información en tiempo real de las <br> casas de cambio y las monedas más <br> importantes del mundo.</p>
+            </div>
+            <section class="main-tables-container">
+                <span>Monedas</span>
+                <div class="table"></div>
+                <div class="update"> <strong>Actualizado: &nbsp</strong>19 julio 23:45</div>
+            </section>
+        </section>
         <section></section>
         <section></section>
         <section></section>
