--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -20,15 +23,38 @@
     </header>
     <main>
         <section class="main-exchange-container">
-            <div class="backgroundImg"><img src="./assets/img/bitcoin.svg" alt=""></div>
+            <div class="backgroundImg"></div>
             <div class="main-exchange-container--title">
                 <h2>Visibilizamos todas las <br> tasas de cambio.</h2>
                 <p>Traemos información en tiempo real de las <br> casas de cambio y las monedas más <br> importantes del mundo.</p>
             </div>
             <section class="main-tables-container">
-                <span>Monedas</span>
-                <div class="table"></div>
-                <div class="update"> <strong>Actualizado: &nbsp</strong>19 julio 23:45</div>
+                
+                <div class="main-currency-table">
+                    <span>Monedas</span>
+                    <div class="currency-table-container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left table__left">Bitcoin</td>
+                                <td class="table__top-right table__right">$1.96<span><img src="./assets/icons/trending-down.svg" alt=""></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__left">Ethereum</td>
+                                <td class="table__right">$0.07<span><img src="./assets/icons/trending-up.svg" alt=""></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__left">Ripple</td>
+                                <td class="table__right">$2.15<span><img src="./assets/icons/trending-down.svg" alt=""></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left table__left">Stellar</td>
+                                <td class="table__bottom-right table__right">$4.96<span><img src="./assets/icons/trending-down.svg" alt=""></span></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="currency-table-update"><p class="update"> <strong>Actualizado: &nbsp</strong>19 julio 23:45</p></div>
+                </div>
+                
             </section>
         </section>
         <section></section>
