Commissions table finishing

--- a/index.html
+++ b/index.html
@@ -54,6 +54,28 @@
                     </div>
                     <div class="currency-table-update"><p class="update"> <strong>Actualizado: &nbsp</strong>19 julio 23:45</p></div>
                 </div>
+                    <div class="commissions-table-container" style="display: none;">
+                        <span>Comisiones</span>
+                        <table>
+                            <tr>
+                                <td class="table__top-left table__left">Bitrade</td>
+                                <td class="table__top-right table__right">$12.96<span><img src="./assets/icons/trending-down.svg" alt=""></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__left">Bitpreco</td>
+                                <td class="table__right">$13.07<span><img src="./assets/icons/trending-up.svg" alt=""></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__left">Novadax</td>
+                                <td class="table__right">$13.15<span><img src="./assets/icons/trending-down.svg" alt=""></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left table__left">Coinext</td>
+                                <td class="table__bottom-right table__right">$14.96<span><img src="./assets/icons/trending-down.svg" alt=""></span></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="commissions-table-update" style="display: none;"><p class="commissions-update"><strong>Actualizado: &nbsp</strong>19 julio 23:48</p></div>
                 
             </section>
         </section>
