--- a/index.html
+++ b/index.html
@@ -83,8 +83,45 @@
              
             </section>
         </section>
-        <section></section>
-        <section></section>
+        <section class="main-product-detail">
+            <span class="potato-icon"></span>
+            <div class="title-and-p">
+                <h2>Creamos un producto <br> sin comparación.</h2>
+                <p>Confiable y diseñado para su uso diario.</p>
+            </div>
+            <div class="benefits-table">
+                <article>
+                    <span><img src="./assets/icons/clock.svg" alt=""></span>
+                    <h2>Tiempo real</h2>
+                    <p>Nuestro API toma información minuto <br> a minuto sobre las tasas que más <br> determinan el comportamiento.</p>
+                </article>
+            </div>
+            <div class="benefits-table">
+                <article>
+                    <span><img src="./assets/icons/eye.svg" alt=""></span>
+                    <h2>No hay tasas escondidas</h2>
+                    <p>Ni en la compra o al momento de exit, <br> Batabit siempre te muestra el costo <br> real de lo que estás adquiriendo.</p>
+                </article>
+            </div>
+            <div class="benefits-table">
+                <article>
+                    <span><img src="./assets/icons/dollar-sign.svg" alt=""></span>
+                    <h2>Compara monedas</h2>
+                    <p>No más rumores, con Babtabit sabrás <br> el valor real de cada moneda en el <br> mercado actual.</p>
+                </article>
+            </div>
+            <div class="benefits-table">
+                <article>
+                    <span><img src="./assets/icons/check-circle.svg" alt=""></span>
+                    <h2>información confiable</h2>
+                    <p>Nuestras fuentes están 100% <br> verificadas y continuamos auditando <br> su contenido mientras se actualizan.</p>
+                </article>
+            </div>
+        </section>
+
+        <section class="bitcoin-girls">
+            <div class="bitcoin-baby"><h2>Conócelo hoy.</h2></div>
+        </section>
         <section></section>
     </main>
     <footer></footer>
