--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header--title-container">
         <h1>La próxima revolución <br> en el intercambio de <br> criptomonedas.</h1>
         <p>Batatabit te ayuda a navegar entre los <br> diferentes precios y tendencias.</p>
-        <a href="">Conoce Nuestros Planes <span><img src="./assets/icons/down-arrow.svg" alt="down arrow"></span></a>
+        <a href="#plans">Conoce Nuestros Planes <span><img src="./assets/icons/down-arrow.svg" alt="down arrow"></span></a>
         </div>
     </header>
     <main>
@@ -86,35 +86,35 @@
         <section class="main-product-detail">
             <span class="potato-icon"></span>
             <div class="title-and-p">
-                <h2>Creamos un producto <br> sin comparación.</h2>
+                <h2>Creamos un producto sin comparación.</h2>
                 <p>Confiable y diseñado para su uso diario.</p>
             </div>
             <div class="benefits-table">
                 <article>
                     <span><img src="./assets/icons/clock.svg" alt=""></span>
                     <h2>Tiempo real</h2>
-                    <p>Nuestro API toma información minuto <br> a minuto sobre las tasas que más <br> determinan el comportamiento.</p>
+                    <p>Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
                 </article>
             </div>
             <div class="benefits-table">
                 <article>
                     <span><img src="./assets/icons/eye.svg" alt=""></span>
                     <h2>No hay tasas escondidas</h2>
-                    <p>Ni en la compra o al momento de exit, <br> Batabit siempre te muestra el costo <br> real de lo que estás adquiriendo.</p>
+                    <p>Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
                 </article>
             </div>
             <div class="benefits-table">
                 <article>
                     <span><img src="./assets/icons/dollar-sign.svg" alt=""></span>
                     <h2>Compara monedas</h2>
-                    <p>No más rumores, con Babtabit sabrás <br> el valor real de cada moneda en el <br> mercado actual.</p>
+                    <p>No más rumores, con Babtabit sabrás  el valor real de cada moneda en el  mercado actual.</p>
                 </article>
             </div>
             <div class="benefits-table">
                 <article>
                     <span><img src="./assets/icons/check-circle.svg" alt=""></span>
                     <h2>información confiable</h2>
-                    <p>Nuestras fuentes están 100% <br> verificadas y continuamos auditando <br> su contenido mientras se actualizan.</p>
+                    <p>Nuestras fuentes están 100%  verificadas y continuamos auditando su contenido mientras se actualizan.</p>
                 </article>
             </div>
         </section>
@@ -122,7 +122,23 @@
         <section class="bitcoin-girls">
             <div class="bitcoin-baby"><h2>Conócelo hoy.</h2></div>
         </section>
-        <section></section>
+        <section id="plans" class="main-plans-container">
+            <div class="main-exchange-container--title">
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+            <section class="plans-cards-sliders">
+                <article class="plans-container--card">
+                    <p class="float">Recomendado</p>
+                    <div class="card">
+                        <h3>Pago Anual</h3>
+                        <p class="price"><sup>$</sup>99</p>
+                        <p>* Ahorras $129 comparado al plan mensual.</p>
+                        <button>Escoger este</button>
+                    </div>
+                </article>
+            </section>
+        </section>
     </main>
     <footer></footer>
     <script>
