--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="card">
                         <h3>Pago Anual</h3>
                         <p class="price"><sup>$</sup>99</p>
-                        <p>* Ahorras $129 comparado al plan mensual.</p>
+                        <p class="ahorro">* Ahorras $129 comparado al plan mensual.</p>
                         <button>Escoger este</button>
                     </div>
                 </article>
