--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batatabit.com</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./tablet.css" media="(min-width: 640px">
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,8 +17,8 @@
     <header>
         <img class="logo" src="./assets/icons/batata.svg" alt="logo-batatabit">
         <div class="header--title-container">
-        <h1>La próxima revolución <br> en el intercambio de <br> criptomonedas.</h1>
-        <p>Batatabit te ayuda a navegar entre los <br> diferentes precios y tendencias.</p>
+        <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+        <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
         <a href="#plans">Conoce Nuestros Planes <span><img src="./assets/icons/down-arrow.svg" alt="down arrow"></span></a>
         </div>
     </header>
@@ -25,8 +26,8 @@
         <section class="main-exchange-container">
             <div class="backgroundImg"></div>
             <div class="main-exchange-container--title">
-                <h2>Visibilizamos todas las <br> tasas de cambio.</h2>
-                <p>Traemos información en tiempo real de las <br> casas de cambio y las monedas más <br> importantes del mundo.</p>
+                <h2>Visibilizamos todas las tasas de cambio.</h2>
+                <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
             </div>
             <section class="main-tables-container">
                 
@@ -89,33 +90,35 @@
                 <h2>Creamos un producto sin comparación.</h2>
                 <p>Confiable y diseñado para su uso diario.</p>
             </div>
-            <div class="benefits-table">
-                <article>
-                    <span><img src="./assets/icons/clock.svg" alt=""></span>
-                    <h2>Tiempo real</h2>
-                    <p>Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
-                </article>
-            </div>
-            <div class="benefits-table">
-                <article>
-                    <span><img src="./assets/icons/eye.svg" alt=""></span>
-                    <h2>No hay tasas escondidas</h2>
-                    <p>Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
-                </article>
-            </div>
-            <div class="benefits-table">
-                <article>
-                    <span><img src="./assets/icons/dollar-sign.svg" alt=""></span>
-                    <h2>Compara monedas</h2>
-                    <p>No más rumores, con Babtabit sabrás  el valor real de cada moneda en el  mercado actual.</p>
-                </article>
-            </div>
-            <div class="benefits-table">
-                <article>
-                    <span><img src="./assets/icons/check-circle.svg" alt=""></span>
-                    <h2>información confiable</h2>
-                    <p>Nuestras fuentes están 100%  verificadas y continuamos auditando su contenido mientras se actualizan.</p>
-                </article>
+            <div class="benifits-table-container">
+                <div class="benefits-table">
+                    <article>
+                        <span><img src="./assets/icons/clock.svg" alt=""></span>
+                        <h2>Tiempo real</h2>
+                        <p>Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+                    </article>
+                </div>
+                <div class="benefits-table">
+                    <article>
+                        <span><img src="./assets/icons/eye.svg" alt=""></span>
+                        <h2>No hay tasas escondidas</h2>
+                        <p>Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                    </article>
+                </div>
+                <div class="benefits-table">
+                    <article>
+                        <span><img src="./assets/icons/dollar-sign.svg" alt=""></span>
+                        <h2>Compara monedas</h2>
+                        <p>No más rumores, con Babtabit sabrás  el valor real de cada moneda en el  mercado actual.</p>
+                    </article>
+                </div>
+                <div class="benefits-table">
+                    <article>
+                        <span><img src="./assets/icons/check-circle.svg" alt=""></span>
+                        <h2>información confiable</h2>
+                        <p>Nuestras fuentes están 100%  verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+                    </article>
+                </div>
             </div>
         </section>
 
